<resources>
    <string name="app_name">The Box</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_description">سامانه هوشمند حمل بار</string>

    <!--NavBar Strings-->
    <string name="navBar_orders"> همه سفارش ها</string>
    <string name="navBar_newOrder">ثبت سفارش</string>
    <string name="navBar_userInfo">اطلاعات کاربری</string>
    <string name="navBar_exit">خروج</string>



    <!--Filter-->
    <string name="location_text">همه استان ها</string>
    <string name="CarType_text">همه وسایل</string>


    <!--New Order-->
    <string name="newOrder_pick_your_image_guide_text">انتخاب عکس برای سفارش :</string>
    <string name="newOrder_title">عنوان</string>
    <string name="newOrder_description">توضیحات</string>
    <string name="newOrder_address_text">*استان و شهر مورد نظر را انتخاب کنید</string>
    <string name="newOrder_address">آدرس</string>
    <string name="newOrder_carType">*نوع ماشین مورد نیاز خود را انتخاب کنید</string>
    <string name="newOrder_priceType">*قیمت گذاری</string>
    <string name="newOrder_price_text">قیمت</string>
    <string name="newOrder_btn_text">ثبت سفارش</string>


    <!--Account Login-->
    <string name="login_phone_text">شماره همراه</string>
    <string name="login_phone_number_guide_text">لطفا شماره همراه خود را جهت تایید اعتبار وارد کنید</string>
    <string name="login_email_text">ایمیل (اختیاری)</string>
    <string name="login_verifyCode_button_text">دریافت کد تایید</string>
    <string name="login_enter_verifyCode_text">لطفا کد تایید را وارد کنید</string>
    <string name="login_verifyCode_text">کد تایید</string>
    <string name="login_submit_verifyCode_button_text">تایید نهایی</string>


    <!--Others-->
    <string name="help_menu_text">راهنما</string>
    <string name="exit_menu_text">خروج</string>
    <string name="like_menu_text">نشان شده ها</string>
    <string name="share_menu_text">اشتراک گذاری</string>
    
    <string name="dummyText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد</string>

    <string name="no_data_text">اطلاعاتی برای نمایش وجود ندارد!</string>


    <!--Show Orders-->
    <string name="showOrder_location_text">محل بارگیری</string>
    <string name="showOrder_CarType_text">نوع ماشین  </string>
    <string name="showOrder_price_text">هزینه   </string>
    <string name="showOrder_description_text">توضیحات</string>
    
    



</resources>
