<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@drawable/mybg">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/MyNewOrderLinearLayoutStyle">

                <TextView
                    style="@style/MyNewOrderStyle"
                    android:text="@string/newOrder_pick_your_image_guide_text" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_selectImage1"
                        style="@style/MyNewOrderImagePreviewStyle"
                        android:src="@drawable/ic_add_image" />

                    <ImageView
                        android:id="@+id/img_selectImage2"
                        style="@style/MyNewOrderImagePreviewStyle"
                        android:src="@drawable/ic_add_image" />

                    <ImageView
                        android:id="@+id/img_selectImage3"
                        style="@style/MyNewOrderImagePreviewStyle"
                        android:src="@drawable/ic_add_image" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/MyNewOrderLinearLayoutStyle">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtLayout_newOrder_title"
                    style="@style/MyNewOrderStyle">


                    <EditText
                        android:id="@+id/edt_newOrder_title"
                        style="@style/MyNewOrderEditTextStyle"
                        android:hint="@string/newOrder_title" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtLayout_newOrder_description"
                    style="@style/MyNewOrderStyle">


                    <EditText
                        android:id="@+id/edt_newOrder_description"
                        style="@style/MyNewOrderStyle"
                        android:backgroundTint="@color/myGrey50"
                        android:gravity="right"
                        android:hint="@string/newOrder_description"
                        android:maxLines="10" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout style="@style/MyNewOrderLinearLayoutStyle">

                <TextView
                    style="@style/MyNewOrderStyle"
                    android:text="@string/newOrder_address_text" />

                <Spinner
                    android:id="@+id/spn_province"
                    style="@style/MyNewOrderSpinnerStyle">
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="@dimen/my8dp"-->
                    <!--android:backgroundTint="@color/myGrey50"-->
                </Spinner>

                <Spinner
                    android:id="@+id/spn_city"
                    style="@style/MyNewOrderSpinnerStyle">

                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtLayout_newOrder_district"
                    style="@style/MyNewOrderStyle">


                    <EditText
                        android:id="@+id/edt_newOrder_district"
                        style="@style/MyNewOrderEditTextStyle"
                        android:hint="@string/newOrder_address" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/MyNewOrderLinearLayoutStyle">

                <TextView
                    style="@style/MyNewOrderStyle"
                    android:text="@string/newOrder_carType" />

                <Spinner
                    android:id="@+id/spn_carType"
                    style="@style/MyNewOrderSpinnerStyle">

                </Spinner>

            </LinearLayout>

            <LinearLayout style="@style/MyNewOrderLinearLayoutStyle">

                <TextView
                    style="@style/MyNewOrderStyle"
                    android:text="@string/newOrder_priceType" />

                <Spinner
                    android:id="@+id/spn_priceType"
                    style="@style/MyNewOrderSpinnerStyle">

                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtLayout_newOrder_price"
                    style="@style/MyNewOrderStyle">

                    <EditText
                        android:id="@+id/edt_newOrder_price"
                        style="@style/MyNewOrderEditTextStyle"
                        android:inputType="number"
                        android:hint="@string/newOrder_price_text" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit_order"
                style="@style/MySubmitButtonStyle"
                android:text="@string/newOrder_btn_text" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
