<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@drawable/mybg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/gradient_bg">

            <TextView
                android:id="@+id/txt_carType_filter"
                style="@style/MyFilterBarFontStyle"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/my8dp"
                android:text="@string/CarType_text" />

            <TextView
                android:id="@+id/txt_location_filter"
                style="@style/MyFilterBarFontStyle"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/my8dp"
                android:text="@string/location_text" />



        </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/card_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_floatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="@dimen/my16dp"
        android:src="@drawable/ic_add"/>


    <TextView
        android:id="@+id/txt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textColor="@color/myGrey50"
        android:textSize="@dimen/myLargeFont"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/no_data_text"
        android:visibility="gone"/>




</android.support.design.widget.CoordinatorLayout>
